--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a class="dark-2" href="" >Portfolio</a></li>
-                <li><a class="dark-2" href="" >Blog</a>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a>
                 </li>
-                <li><a href="" ><button class="btn">Hire Me</button></a></li>
+                <li><a href=""><button class="btn">Hire Me</button></a></li>
 
             </ul>
         </nav>
@@ -28,13 +28,139 @@
             <div class="banner-content ">
                 <h4 class="banner-head dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
                 <button class="btn">Download CV</button>
                 <button class="btn">Contact</button>
             </div>
             <img class="banner-img" src="images/hardy.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-des">I, am designer & developer with a passion for web design. I enjoy developing simple,
+                clean and slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional results while working with me. Delivering work within time and budget which meets clients
+                requirements in our meta.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-des">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-des">abc@mail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth</p>
+                    <p class="item-des">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-des">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="skills">
+                <h3 class="section-title text-center">What I do</h3>
+                <p class="do-des">
+                    I have more than 10 years experience building software for clients all over the world. Below is a
+                    quick overview of my main technical skill sets and technologies i use. Want to find out more about
+                    my experience? Check out my online resume and project portfolio.
+                </p>
+
+                <div class="skill-cont">
+
+                    <div class="skill">
+                        <img src="/images/icons/js.png" alt="">
+                        <h4 class="skill-title">Vanilla JavaScript</h4>
+                        <p class="skill-des">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="/images/icons/react.png" alt="">
+                        <h4 class="skill-title">React</h4>
+                        <p class="skill-des">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="/images/icons/nodejs.png" alt="">
+                        <h4 class="skill-title">Node.js</h4>
+                        <p class="skill-des">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="/images/icons/mongo.png" alt="">
+                        <h4 class="skill-title">MongoDB</h4>
+                        <p class="skill-des">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="resume text-center">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-cont text-left">
+                <div class="resume-col">
+                    <h3 class="resume-col-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-col">
+                    <h3 class="resume-col-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-btn">
+            <button class="btn-cv">Download CV</button>
+        </div>
+        </section>
+    </main>
 
 </body>
 
