--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
+                <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-img" src="images/hardy.png" alt="">
         </div>
+        <script src="https://kit.fontawesome.com/8584240c12.js" crossorigin="anonymous"></script> 
     </header>
     <main>
         <section class="about secondary-bg">
@@ -157,7 +158,7 @@
                 </div>
             </div>
             <div class="text-center resume-btn">
-                <button class="btn-cv">Download CV</button>
+                <button class="btn-cv"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
